--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "date-fns": "^3.0.6",
     "firebase": "^10.7.1",
     "firebase-admin": "^13.6.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.303.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^2.2.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
