--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^2.2.0",
-    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
